# fjarr

./: Cargo.toml  build.rs  flash.sh  rust-toolchain.toml
.cargo/: config.toml
hw/: fjarr.kicad_pro  fjarr.kicad_sch
src/: cmd.rs  heartbeat.rs  http.rs  index.html  ir_rx.rs  ir_tx.rs  main.rs  mdns.rs  recording.rs  storage.rs  ws.rs
